syntax = "proto3";

service Database {
	rpc Query(QueryRequest) returns (QueryResponse) {}
}

message QueryRequest {
	string sql_string = 1;
}

message QueryResponse {
	bytes result = 2;
}